# Feshbach-Engine

./: CMakeLists.txt  Makefile  README.md  README.txt  feshbach_engine_Fig2.sh  feshbach_engine_Fig7.sh
data/: feshbach_engine_ramp_durations_Fig2.txt  feshbach_engine_ramp_durations_Fig7.txt
figures/: feshbach_engine_Fig1.tikz  feshbach_engine_Fig2.tikz  feshbach_engine_Fig3.tikz  feshbach_engine_Fig4.tikz  feshbach_engine_Fig5.tikz  feshbach_engine_Fig6.tikz  feshbach_engine_Fig7.tikz  tikz_settings.tex
include/: ds.h  evolution.h  fileIO.h  init.h  kernels.h  operators.h  parser.h  split_op.h
matlab/: bec_interaction_ramp_1D.m  feshbach_engine_Fig1.m  feshbach_engine_Fig2.m  feshbach_engine_Fig4.m  feshbach_engine_Fig5.m  feshbach_engine_Fig6.m  feshbach_engine_Fig7.m  feshbach_engine_gpue_prep.m
src/: ds.cu  evolution.cu  fileIO.cu  init.cu  kernels.cu  operators.cu  parser.cu  split_op.cu
